html cssの基礎コース終わり

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 html{
   font-size: 62.5%;
+  height: 100%;
 }
 body{
-  width: 980px;
-  margin: 0 auto;
+  height: 100%;
 }
 
 /*  header*/
@@ -33,44 +33,142 @@ body{
   display: block;
   padding: 15px;
 }
+
 .top_menu li a:hover{
   text-decoration: underline;
 }
 
-
-
-
-
-/* フロートの勉強 */
-.content_float1{
-  width: 700px;
+/* 全体 */
+.container{
+  width: 980px;
   margin: 0 auto;
-  background-color: #ccc;
+  min-height: 100%;
+  position: relative;
 }
-.content_float2{
-  width: 700px;
-  height: 300px;
-  margin: 0 auto;
-  background-color: #848484;
+
+/* バナー   */
+
+.image_area{
+  width: 100%;
 }
-#main {
+
+.wrapper{
+  margin-top: 10px;
+  padding-bottom: 120px;
+}
+
+
+/* aside */
+
+.side_menu{
+  width: 300px;
   float: left;
-  width: 200px;
+}
+
+.side_menu li{
+  background-color: #f5b4b3;
+  height: 6rem;
+  margin-bottom: 10px;
+}
+.side_menu li:hover{
+  opacity: 0.5;
+}
+.side_menu li a{
+  font-size: 2rem;
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  padding: 2rem;
+}
+.side_menu li a:hover{
+  opacity: 0.5;
+}
+
+
+.banner img{
+  width: 100%;
+}
+.banner{
+  margin-top: 20px;
+}
+
+.banner:hover{
+  opacity: 0.5;
+}
+
+.parent{
+  height: 70px;
+  weight: 100%;
+  background-color: blue;
+  margin-top: 40px;
+  padding-top: 20px;
+}
+.child{
+  background-color: red;
+  height: 50px;
+  padding-top: 10px;
+  margin-top: 60px;
+
+}
+
+/* 記事 */
+.content{
+  width: 660px;
+  margin-left: 20px;
+  float: left;
+  font-size: 1.5rem;
+}
+.news{
   height: 200px;
-  background-color: #333dff;
+  background-color: #fce8e7;
+  padding: 20px;
+  overflow: scroll;
+  line-height: 2;
 }
-#side{
-  float: left;
-  width: 400px;
-  height: 400px;
-  background: #27c42a;
+
+
+/* フッター */
+.footer{
+  background-color: #4d4d4d;
+  height: 100px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  display: table;
 }
-#under{
-  clear: left;
+.footer p {
+  font-size: 1rem;
+  color: #fff;
+  text-align: center;
+  vertical-align: middle;
+  display: table-cell;
 }
 
 .clearfix:after{
   content: "";
   display: block;
   clear: both;
+}
+
+.mybanner{
+  margin-top: 10px;
+  display: table;
+}
+
+.mybanner p{
+  display: table-cell;
+}
+.mybanner p img{
+  width: 100%;
+}
+
+
+/* company.css */
+
+
+.side_menu .point{
+  background-color: #fcecec;
+}
+.side_menu .point a{
+  color: #4d4d4d;
 }
