--- a/css/normalize.css
+++ b/css/normalize.css
@@ -359,3 +359,11 @@ li{
   /* リスト先頭の黒丸を削除 */
   list-style: none;
 }
+
+th,td{
+  border-collapse: collapse;
+}
+
+table{
+  border-collapse: collapse;
+}
